--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/organ/account/auth_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/organ/account/auth_result.vm
@@ -1,3 +1,13 @@
+<html>
+<title>幼富通，幼富未来 - 机构认证<title>
+<head>
+script type="text/javascript">
+$(function(){
+	$('.nav a:eq(0)').addClass('active');
+});
+</script>
+</head>
+<body>
 <div id="body">
         <div class="container">
 			<div class="a1">机构账户安全认证</div>
@@ -13,10 +23,13 @@
                 <div class="b2">
                 	<p>为了确保机构收款账户的准确安全，幼富通已给你注册的对公银行账户打款1元以内随机金额，请务必回复收到的实际金额才能通过安全认证。</p>
 					<p>幼富通将在最快24小时内（工作日）严格审核您的开户申请材料，通过即可使用学费通快速发起收费。</p>
-                                        <p>在此期间，你可以根据引导，开始学习如何使用学费通，并预先设置账单周期、价目表及班级。</p>
+                    <p>在此期间，你可以根据引导，开始学习如何使用学费通，并预先设置账单周期、价目表及班级。</p>
                 </div>
 				<div class="b3"><a href="verifyIndexEmpty.html" class="btnA">我的账户</a></div>
 			</div>
         </div>
     </div>
 </div>
+</div>
+</body>
+</html>
