--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_organ.vm
@@ -8,21 +8,21 @@
 			<div class="b2">
 				#if(${CUSTINFO.invnm})
 			   		<span>你好，<label>
-			   		<a href="${ufbDomain}/organ/setting/account_index.htm" class="c1">${CUSTINFO.invnm}</a></label></span>
-			   		<a href="${ufbDomain}/organ/logout.htm" class="quit">退出</a>
+			   		<a href="${ufbDomain}/corp/setting/account_index.htm" class="c1">${CUSTINFO.invnm}</a></label></span>
+			   		<a href="${ufbDomain}/corp/logout.htm" class="quit">退出</a>
 				#else
 				   <div class="b2">
-		               <a href="${ufbDomain}/organ/index.htm" class="c1" id="login">登录</a>
-		               <a href="${ufbDomain}/organ/register_index.htm" class="c1">注册</a>
+		               <a href="${ufbDomain}/corp/account/index.htm" class="c1" id="login">登录</a>
+		               <a href="${ufbDomain}/corp/account/register.htm" class="c1">注册</a>
 				   </div>
 				#end
 			</div>
 		</div>
 	</div>
     <div class="container">
-        <a href="${ufbDomain}/organ/index.htm" class="logo"></a>
+        <a href="${ufbDomain}/corp/index.htm" class="logo"></a>
 		<div class="nav">
-			<a href="${ufbDomain}/organ/uft_index.htm">我的账户</a>
+			<a href="${ufbDomain}/corp/uft_index.htm">我的账户</a>
 			<a href="javascript:;">收费明细</a>
 			<a href="javascript:;">分期购</a>
 			<a href="javascript:;">帮助中心</a>
